@@ -7,7 +7,7 @@
             "ID": {
               "array": [
                 {
-                  "hex-string": "Åù ~ÒÕ4=ãg\u000e`\nç"
+                  "hex-string": "×C¨üÜø{iÃeH!©A"
                 },
                 {
                   "hex-string": "0BD³C|N{:g\u0016l^C"
