@@ -1,5 +1,7 @@
 Release 0.1.6
 - Added PDF::StructTreeRoot, PDF::NameTree
+- Altered composition of PDF::Mask
+- Fixed DeviceN Color load warnings
 Release 0.1.5
 Improvements from field testing of pdf-checker.p6:
 - PDF::Outline, PDF::Outlines:
